Fix alignment issue in home page

--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -1,8 +1,8 @@
 @use "../abstracts/variables" as *;
 
 .home {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   background-image: linear-gradient(
       rgba(0, 0, 0, $bg-filter-alpha),
       rgba(0, 0, 0, $bg-filter-alpha)
@@ -20,8 +20,8 @@
     font-size: 6rem;
   }
 
-  .body {
-    height: calc(100% - $header-height);
+  &__body {
+    height: calc(90vh - $header-height);
     display: flex;
     flex-direction: column;
     row-gap: 2.5rem;
